[package]
name = "perspective-diff-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
hex-literal = "0.3.4"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
base64ct = { version = "1.5.0", features = ["alloc"] }
lazy_static = "1.4.0"

[lib]
name = "perspective_diff_sync"
path = "src/lib.rs"

[[bin]]
name = "perspective_diff_sync_bin"
path = "src/main.rs"
